--- a/1-chat-model-and-ai-service/src/main/resources/application.properties
+++ b/1-chat-model-and-ai-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-quarkus.langchain4j.openai.api-key=${OPENSHIFT_AI_KEY}
-quarkus.langchain4j.openai.chat-model.model-name=mistral-7b-instruct
-quarkus.langchain4j.openai.base-url=https://mistral-7b-instruct-v0-3-maas-apicast-production.apps.prod.rhoai.rh-aiservices-bu.com:443/v1
+quarkus.langchain4j.openai.api-key=${OPENAI_API_KEY}
+
 
 quarkus.langchain4j.timeout=1m
