--- a/6-contextual-rag/pom.xml
+++ b/6-contextual-rag/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-embeddings-bge-small-en-q</artifactId>
-            <version>0.36.2</version>
+            <version>1.0.0-beta2</version>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.langchain4j</groupId>
