--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 
         <compiler-plugin.version>3.13.0</compiler-plugin.version>
 
-        <quarkus.platform.version>3.16.4</quarkus.platform.version>
-        <quarkus-langchain4j.version>0.22.0.CR2</quarkus-langchain4j.version>
+        <quarkus.platform.version>3.21.0</quarkus.platform.version>
+        <quarkus-langchain4j.version>0.26.1</quarkus-langchain4j.version>
     </properties>
 
     <dependencyManagement>
